--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -10,13 +10,17 @@
 	height: 100%;
 }
 
-.container{
-	max-width: 1220px;
-	padding: 0 20px;
-    width: 100%;
-    margin: 0 auto;
-}
-
+.container {
+	max-width: 1140px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+  }
+  @media only screen and (max-width: 1180px) {
+	.container {
+	  width: calc(100% - 40px);
+	}
+  }
 .content{
 	flex: 1 0 auto;
 }
