--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -16,21 +16,11 @@
 	margin-left: auto;
 	margin-right: auto;
   }
-  @media only screen and (max-width: 1180px) {
+  @media screen and (max-width: 1180px) {
 	.container {
 	  width: calc(100% - 40px);
 	}
   }
 .content{
 	flex: 1 0 auto;
-}
-
-.button{
-	color: #fff;
-	background: #101010;
-	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-	border-radius: 20px;
-	display: block;
-	line-height: 24px;
-	text-align: center;
 }
